--- a/app/globals.css
+++ b/app/globals.css
@@ -115,3 +115,14 @@ body {
   background-color: var(--background);
   color: var(--foreground);
 }
+
+@layer utilities{
+  .no-scrollbar::-webkit-scrollbar{
+    display: none;
+  }
+  .no-scrllbar {
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+  }
+}
+
