--- a/app/globals.css
+++ b/app/globals.css
@@ -2,7 +2,8 @@
 
 @custom-variant dark (&:is(.dark *));
 
-html, body{
+html,
+body {
   height: 100%;
   overflow: hidden;
 }
@@ -116,13 +117,12 @@ body {
   color: var(--foreground);
 }
 
-@layer utilities{
-  .no-scrollbar::-webkit-scrollbar{
+@layer utilities {
+  .no-scrollbar::-webkit-scrollbar {
     display: none;
   }
-  .no-scrllbar {
+  .no-scrollbar {
     -ms-overflow-style: none;
     scrollbar-width: none;
   }
 }
-
